--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "axios": "^1.13.5"
+    "axios": "^1.13.5",
+    "electron": "^40.6.1"
   },
   "build": {
     "appId": "com.apicaller.app",
