--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "axios": "^1.13.5",
-    "electron": "^40.6.1"
+    "axios": "^1.13.5"
   },
   "build": {
     "appId": "com.apicaller.app",
